--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="text-box">
             <h1>CanSat</h1>
             <p>
-            Soutěž pořádána vzdělávacím oddělením ESA (European Space Agency). Každýtým má za úkol sestavit  “satelit” o velikosti i tvaru plechovky. 
+            Soutěž pořádána vzdělávacím oddělením ESA (European Space Agency). Každý tým má za úkol sestavit “satelit” o velikosti i tvaru plechovky. 
             </p>
             <br>
             <p>
@@ -69,7 +69,7 @@
             </p>
             <br>
             <p>
-            Úkol každého tým je splnit dvě mise. Jednu danou pořadately, druhou si musí sami vymyslet   
+            Úkol každého tým je splnit dvě mise. Jednu danou pořadately, druhou si musí sami vymyslet.
             </p>
         </div>
     </div>
@@ -87,6 +87,7 @@
     <div class="card">
         <div class="pic">
             <img src="images/holub.webp" alt="Jakub Holub">
+        </div>
             <div class="info">
                 <h3>Jakub Holub</h3>
                 <span>Head organizer & Management</span>
@@ -98,11 +99,11 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     <div class="card">
         <div class="pic">
             <img src="images/nemcik.webp" alt="Jakub Němčík">
+        </div>
             <div class="info">
                 <h3>Jakub Němčík</h3>
                 <span>Content creator & Graphics designer</span>
@@ -114,11 +115,11 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     <div class="card">
         <div class="pic">
             <img src="images/havel.webp" alt="Prokop Havlík">
+        </div>
             <div class="info">
                 <h3>Prokop Havlík</h3>
                 <span>Web developer & Graphics designer</span>
@@ -130,11 +131,11 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     <div class="card">
         <div class="pic">
             <img src="images/hovanec.webp" alt="Alexandr Chovanec">
+        </div>
             <div class="info">
                 <h3>Alexandr Chovanec</h3>
                 <span>Hardware & 3D Modeling</span>
@@ -146,11 +147,11 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     <div class="card">
         <div class="pic">
             <img src="images/oprsteny.webp" alt="David Oprštěný">
+        </div>
             <div class="info">
                 <h3>David Oprštěný</h3>
                 <span>Programmer & Parachute</span>
@@ -162,11 +163,11 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     <div class="card">
         <div class="pic">
             <img src="images/tomis2.webp" alt="Daniel Tomis">
+        </div>
             <div class="info">
                 <h3>Daniel Tomis</h3>
                 <span>Programmer & Data analyst</span>
@@ -178,14 +179,30 @@
                     <a href="#" class="fab fa-github"></a>
                 </div>
             </div>
-        </div>
     </div>
     </div>
  </section>
  <section class="background">
 <div class="text">
+
 <div class="text-box">
     <h1>Naše mise</h1>
+    <div class="primary-mission">
+    <h2 class="text-question-box">Primarní mise</h2>
+    <p>
+        Primární mise je jasně daná, jejím cílem je měřit předem vybrané parametry okolního prostředí a jednou za sekundu odesílat data do pozemní stanice. Těmito parametry jsou teplota vzduchu
+        a atmosférický tlak. Tato získaná data musí být každý tým chopen analyzovat a v nějaké formě prezentovat. </p>
+    </div>
+    <div class="secondary-mission">
+    <h2 class="text-question-box">Sekundární mise</h2>
+    <p>
+        Sekundární misi si každý tým určuje sám a tato mise musí dosáhnout určitého technologického,
+        inovativního či vědeckého pokroku. 
+    </p>
+    <p>
+        My jsme se při výběru naší mise zaměřili na technický pokrok. Cílem naší mise je postavit CanSat, který bude schopen řízeného přistání. 
+    </p>
+</div>
 </div>
 </div>
  </section>
