--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <h2 class="text-question-box">Primarní mise</h2>
     <p>
         Primární mise je jasně daná, jejím cílem je měřit předem vybrané parametry okolního prostředí a jednou za sekundu odesílat data do pozemní stanice. Těmito parametry jsou teplota vzduchu
-        a atmosférický tlak. Tato získaná data musí být každý tým chopen analyzovat a v nějaké formě prezentovat. </p>
+        a atmosférický tlak. Tato získaná data musí být každý tým schopen analyzovat a v nějaké formě prezentovat. </p>
     </div>
     <div class="secondary-mission">
     <h2 class="text-question-box">Sekundární mise</h2>
